--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/core": "^8.7.5",
+    "express": "^4.18.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.37"
   },
